Closed Bug 1217170 Opened 9 years ago Closed 9 years ago

YouTube serves 360p VP8 video instead of Flash video to FF 40+

Categories

(Core :: Audio/Video: Playback, defect, P1)

40 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla44
Tracking Status
firefox41 --- wontfix
firefox42 --- wontfix
firefox43 + verified
firefox44 + verified
firefox-esr38 --- unaffected
relnote-firefox --- 44+

People

(Reporter: tmay, Assigned: jya)

References

Details

(Whiteboard: [betabreakers-fx43])

Attachments

(10 files)

Attached file LightbringerDxDiag.txt
Actual Result:
The youtube video player "quality" button shows a maximum video resolution of 360p. 

Expected Result:
The user should be able to choose resolutions of up to 1080p.

Steps to Recreate:
1. Launch Firefox Developer
2. Navigate to youtube. 
3. Start playing the "Star Wars Force Awakens" trailer on the homepage. 
4. Observe the max resolution is 360p.
Whiteboard: [betabreakers-fx43]
Your system may not support a higher resolution but lets first try a few things:

1) Please make sure your graphics drivers are up to date. The latest for your chipset is v14.36.5.5016 released on April 23, 2012.

2) Check what the value of media.mediasource.enabled is in about:config (it should be enabled by default).

3) Load https://www.youtube.com/html5 and report back what Youtube says your browser does/not support.

4) Right click on the video and see if the menu says Flash or HTML5 Video.

5) If it is HTML5 video, select the "stats for nerds" option and paste the stats into this bug report.

6) Finally, download the latest version of Google Chrome and try playing the same video.

Thanks
See Also: → 1216298
1. It is an older driver and the latest version v14.36.5.5016 according to the installer is "not validated for this computer. Please obtain the appropriate driver from the computer's manufacturer." Dell's installer failed as well. 

2. It is set to true.

3. supports HTMLVideoElement, WebM VP8 and Media Source Extensions. Does not support H.264, MSE and H.264 and MSES and WebM VP9.

4. (on a different device so I cant copy and paste it)
video id: sGbxmsDFVnE
dimensions: 854 x480
resolution: 640 x 360
volume: 100%
stream host:
stream type: https
cpn: K-VMY_VxK94C_wsK
mime type: video/webm; codecs= 'vp8.0, vorbis'
dash: no(43)
connection speed: 0kps
dropped frames: 0/44

5.) HTML5

6.) it works fine in the latest version of google chrome.
Do you have flash installed?
Flags: needinfo?(tramstheman)
(In reply to Jeff Muizelaar [:jrmuizel] from comment #4)
> Do you have flash installed?

Flash was not installed. I just installed it and re-tested. The test yielded the same results.
Flags: needinfo?(tramstheman)
Summary: Youtube Video Resolution has maximum resolution of 360p → Youtube does not serve flash video to FF on XP
Component: Graphics → Audio/Video: Playback
:kentuckyfriedtakahe do we expect youtube to serve flash video on WinXP?
Flags: needinfo?(ajones)
Also occurs on Onyxia
Attached file OnyxiaAboutSupport.txt
Attached file OnyxiaDxDiag.txt
Also occurs on warlock
Attached file WarlockDxDiag.txt
I can reproduce this in a Windows XP VM with Firefox 41.0.2 so I don't think it's a hardware compatibility issue.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: 43 Branch → Trunk
(In reply to Anthony Hughes, QA Mentor (:ashughes) from comment #15)
> I can reproduce this in a Windows XP VM with Firefox 41.0.2 so I don't think
> it's a hardware compatibility issue.

You think it's an OS issue?
[Tracking Requested - why for this release]:

It seems like Youtube stops falling back to Flash starting with Firefox 40, Firefox 39 and earlier fall back successfully. I'm not sure if this is our regression or theirs.
Attached file McBainDxDiag.txt
Attached file McBainAboutSupport.txt
Happens on mcbain too.
(In reply to Trammel May from comment #20)
> Happens on mcbain too.

Thanks I think it's safe to say it will show up on all Windows XP systems so no need to add further system info to this bug.
Here is the pushlog I get for the "regression":
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=385840329d91&tochange=26d6392b5403

I'm not sure if anything stands out in that log.
Keywords: regression
Richard - know anything about this?
Flags: needinfo?(rleider)
ashughes is it possible to narrow the regression window down, or do we not have inbound builds from that far back?
Flags: needinfo?(anthony.s.hughes)
YouTube considers all versions of Firefox greater than 40 to be <video> capable.
Flags: needinfo?(rleider)
Richard, is it intentional then to not serve higher resolution to FF windows XP users? (FF on XP does not have H.264 or VP9 MSE support)
Flags: needinfo?(rleider)
Firefox 40+ users without access to h.264 or VP9 will be limited to 360p VP8.
Flags: needinfo?(rleider)
I may be able to regress this on inbound but it seems like comment 27 makes this bug invalid.
Flags: needinfo?(anthony.s.hughes)
Jean-Yves will enable VP9 MSE on Windows XP in Firefox 43+.

We have some helper functions to determine Windows OS version in MFBT:

https://mxr.mozilla.org/mozilla-central/source/mfbt/WindowsVersion.h
Assignee: nobody → jyavenard
Priority: -- → P1
Depends on: 1213177
Summary: Youtube does not serve flash video to FF on XP → YouTube serves 360p VP8 video instead of Flash video to FF 40+ on XP
(In reply to Richard Leider from comment #25)
> YouTube considers all versions of Firefox greater than 40 to be <video>
> capable.

MSE is only support if H.264/AAC decoders are provided by the underlying OS. It is better to provide XP users with the Flash player until MSE support is available on XP.
Flags: needinfo?(ajones)
[Tracking Requested - why for this release]:

This YouTube problem affects all Windows versions that don't have H.264 platform decoders (such as Windows Vista or N/KN editions).
OS: Windows XP → All
Hardware: x86 → All
Summary: YouTube serves 360p VP8 video instead of Flash video to FF 40+ on XP → YouTube serves 360p VP8 video instead of Flash video to FF 40+
Depends on: 1218625
got bitten on that one, was giving a mp4 codec yet it kept returning no.
Attachment #8679202 - Flags: review?(ajones)
Attachment #8679202 - Flags: review?(ajones) → review+
Attachment #8679203 - Flags: review?(ajones) → review+
We should try to uplift this fix to 43 after it lands on mozilla-central. We want to minimize the number of releases (40–42?) where Firefox users without Windows platform decoders get crappy VP8 instead of streaming H.264.
https://hg.mozilla.org/mozilla-central/rev/1c75443c6026
https://hg.mozilla.org/mozilla-central/rev/910ba8ed6e18
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment on attachment 8679202 [details] [diff] [review]
P1. Rename functions to explicitly reflect what they are doing.

Request is for both patches.
Approval Request Comment
[Feature/regressing bug #]: 1217170
[User impact if declined]: People are limited to 360p on youtube. YouTube now only serves content via MSE and will prefer plain webm/vp8 @360p over using Flash. People will use different web browsers if YouTube doesn't work as expected.
[Describe test coverage new/current, TreeHerder]: in central
[Risks and why]: Moderate, this is exposing WebM/MSE which was until now prefed off. However been available on linux in 43 ; no report bugs and on mochitest since 42.
[String/UUID change made/needed]: None.
Attachment #8679202 - Flags: approval-mozilla-aurora?
(In reply to Richard Leider from comment #27)
> Firefox 40+ users without access to h.264 or VP9 will be limited to 360p VP8.

It looks like YouTube will still serve Flash video if you disable VP8. To do that, set the "media.webm.enabled" pref = false. Windows XP users might want to disable VP8 until Firefox 43 is released (which will enable VP9 for users without H.264 codecs, e.g. XP).
Comment on attachment 8679202 [details] [diff] [review]
P1. Rename functions to explicitly reflect what they are doing.

looks like 43 is now beta... so requesting beta too
Attachment #8679202 - Flags: approval-mozilla-beta?
Comment on attachment 8679202 [details] [diff] [review]
P1. Rename functions to explicitly reflect what they are doing.

I like the idea here, but the risk right now is that we are doing the merge early, and if we try to stuff this into the last 5 minutes of aurora, and it doesn't merge well, or causes any sorts of problems that could block the release, that will happen over the weekend and while most of the relman team is traveling. I don't want to burn everyone out. Since we have lived with this lower quality video for XP since 40 I think we can handle living with it in 43 beta 1.  Let's aim this change for next week after the merge and beta 1 release and get it into beta 2 or 3 once we have more time to test it on nightly. So the goal is still to get it into 43 on release.
Attachment #8679202 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora-
(In reply to Liz Henry (:lizzard) (needinfo? me) from comment #41)
> is traveling. I don't want to burn everyone out. Since we have lived with
> this lower quality video for XP since 40 I think we can handle living with
> it in 43 beta 1.  Let's aim this change for next week after the merge and

We haven't live with this in 40 or 41!

YouTube was serving Flash content to XP users ; they only just decided that it wasn't going to happen anymore for anyone using >= 40.

So it's only been a week that XP users (and other people on some revision of windows) have suddenly been reduced to watching 360p video max when using firefox.
Flags: needinfo?(lhenry)
Ah, sorry, I see your point.   But I really am feeling the risk right now of 3 different teams ending up having to work even more than they are already going to over the weekend... (from so many other things going on at once). I read your patch and think it is good, but I'm hoping that aiming it at beta 2 will not be so bad!    It is just the timing being right at the end of aurora has always been a big risk factor for slightly uncertain uplifts.... Better to put it into our more normal process in early beta.  I know some beta 1 users may not be happy but at least it's just lower quality video for a week, not unpredictable crash or something. And right now our 42 and 44 releases for Tuesday have to be the priority. 
 
Sylvestre, if you wake up and disagree with me, and think it is not so risky, feel free to chime in and try to get this in before the merge, so that jya and potentially, many beta 1 users, will be happy.
Flags: needinfo?(lhenry) → needinfo?(sledru)
I don't think a week will matter. :cpeterson may have a different view to mine (which really doesn't matter much here)
I am un-needinfo'ing Sylvestre because I agree that waiting one week is not a big deal. We want to make sure we get this fix into 43 beta 2, however.
Flags: needinfo?(sledru)
Release Note Request (optional, but appreciated)
[Why is this notable]: YouTube recently disabled Flash support so users without H.264 codecs (e.g. Windows XP) get low-quality 360p video. Enabling WebM/VP9 video support on systems that don't support H.264 will allow YouTube to serve high-quality video again. This issue was fixed in 44 but uplifted to 43.
[Suggested wording]: Enable WebM/VP9 video support on systems that don't support MP4/H.264.
[Links (documentation, blog post, etc)]:
relnote-firefox: --- → ?
Tracking this for 43 and 44.
Comment on attachment 8679202 [details] [diff] [review]
P1. Rename functions to explicitly reflect what they are doing.

Let's uplift this for the beta 2 build so that Firefox will better support high quality video playback.
Attachment #8679202 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Hi, this does not apply cleanly to beta:

grafting 311140:1c75443c6026 "Bug 1217170: P1. Rename functions to explicitly reflect what they are doing. r=kentuckyfriedtakahe"
merging dom/media/DecoderTraits.cpp
warning: conflicts during merge.
merging dom/media/DecoderTraits.cpp incomplete! (edit conflicts, then use 'hg resolve --mark')
merging dom/media/mediasource/MediaSource.cpp

can you take a look, thanks!
Flags: needinfo?(jyavenard)
those patches are already in Aurora (44)
Flags: qe-verify+
Reproduced the initial issue using Firefox 43 beta 1, verified that the issue is fixed using Firefox 43 beta 2 and Firefox Developer Edition 44.0a2 on Windows XP 32-bit.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: