Bug 1217170: P1. Rename functions to explicitly reflect what they are doing. r=kentuckyfriedtakahe